# domplotlib

./: .bumpversion.cfg  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  MANIFEST.in  README.rst  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
doc-source/: Source.rst  conf.py  contributing.rst  index.rst  license.rst  requirements.txt
doc-source/_templates/sidebar/: navigation.html
doc-source/api/: domplotlib.rst  plots.rst  styles.rst
domplotlib/: __init__.py  plots.py
domplotlib/styles/: __init__.py  _plt.py  default.py  domdf.py
tests/: common.py  conftest.py  image_hashes.json  image_hashes_310.json  image_hashes_311.json  image_hashes_36.json  image_hashes_37.json  image_hashes_38.json  image_hashes_39.json  plots.py  requirements.txt  test_domplotlib.py  test_plots.py
