[build-system]
requires = [ "setuptools>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "domplotlib"
version = "0.2.0"
description = "Dom's extensions to matplotlib"
readme = "README.rst"
keywords = [ "matplotlib", "plotting", "visualisation",]
dynamic = [ "requires-python", "classifiers", "dependencies",]
[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/domplotlib"
"Issue Tracker" = "https://github.com/domdfcoding/domplotlib/issues"
"Source Code" = "https://github.com/domdfcoding/domplotlib"
Documentation = "https://domplotlib.readthedocs.io/en/latest"
