[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "domplotlib"
version = "0.2.0"
description = "Dom's extensions to matplotlib"
readme = "README.rst"
keywords = [ "matplotlib", "plotting", "visualisation",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/domplotlib"
"Issue Tracker" = "https://github.com/domdfcoding/domplotlib/issues"
"Source Code" = "https://github.com/domdfcoding/domplotlib"
Documentation = "https://domplotlib.readthedocs.io/en/latest"

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Matplotlib",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
additional-files = [ "include domplotlib/styles/domdf.mplstyle",]

[tool.mkrecipe]
conda-channels = [ "domdfcoding",]
extras = "all"
